--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,8 @@ header {
   align-items: center;
 }
 
-.header-link {
+.header-link,
+.nav-link {
   text-decoration: none;
   color: var(--white);
 }
@@ -50,6 +51,9 @@ header {
 .section-search {
   border: 1px solid;
   display: flex;
+  padding: 0 1% 0;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .logo-tatui {
@@ -72,9 +76,18 @@ header {
 }
 
 .input-search {
-    border: 1px solid var(--blue);
-    height: 5vh;
-    border-radius: 8px;
+  border: 1px solid var(--blue);
+  height: 5vh;
+  border-radius: 8px;
+}
+
+nav {
+  background-color: var(--blue);
+  height: 10vh;
+  padding: 0 2% 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 @media screen and (min-width: 768px) {
@@ -118,5 +131,12 @@ header {
   .section-search {
     padding: 0 8% 0;
     height: 15vh;
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 8% 0;
   }
 }
