--- a/src/styles.css
+++ b/src/styles.css
@@ -13,9 +13,13 @@
   --white: #ffff;
 }
 
+body {
+  border: 2px solid red;
+}
+
 header {
   background-color: var(--blue);
-  height: 24vh;
+  height: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -38,47 +42,64 @@ header {
   position: relative;
   top: 6%;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 0 5% 0;
 }
 
 .header-link,
 .nav-link {
   text-decoration: none;
   color: var(--white);
+  font-size: 0.9rem;
 }
 
 .section-search {
-  border: 1px solid;
   display: flex;
   padding: 0 1% 0;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
+  color: var(--dark-blue);
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1%;
+}
+
+.logo-title-prefeitura {
+  font-size: 1rem;
 }
 
 .logo-tatui {
-  height: 100px;
+  height: 15vh;
 }
 
 .logo-title {
   font-weight: bolder;
+  font-size: 2.3rem;
+  text-align: center;
 }
 
 .icons-container {
-  display: flex;
-  border: 1px solid;
-  justify-content: center;
-  align-items: center;
+  margin: 1%;
 }
 
 .icons {
-  height: 40px;
+  height: 5vh;
 }
 
 .input-search {
   border: 1px solid var(--blue);
   height: 5vh;
   border-radius: 8px;
+  margin: 1%;
+  padding: 0 0 0 1%;
+  width: 50vw;
 }
 
 nav {
@@ -88,6 +109,7 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -102,6 +124,14 @@ nav {
 
   .header-link {
     margin-left: 2%;
+  }
+
+  nav {
+    height: 5vh;
+  }
+
+  .input-search {
+    width: 40vw;
   }
 }
 
@@ -131,6 +161,7 @@ nav {
   .section-search {
     padding: 0 8% 0;
     height: 15vh;
+    flex-wrap: nowrap;
   }
 
   nav {
@@ -138,5 +169,9 @@ nav {
     justify-content: space-evenly;
     align-items: center;
     padding: 0 8% 0;
+  }
+
+  .input-search {
+    width: 20vw;
   }
 }
