--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,9 @@
 }
 
 body {
-  border: 2px solid red;
+  border: 5px solid red;
+  height: 100vh;
+  width: 100vw;
 }
 
 header {
@@ -123,20 +125,43 @@ nav {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40vh;
+  font-size: 0.8rem;
 }
 
 .infos-container {
-  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  margin-right: 4%;
 }
 
 .official-acts-container {
+  border-left: 1px solid;
+  margin: auto;
+}
+
+.official-acts-title {
+  position: relative;
+  left: 5%;
+}
+
+.official-acts-links {
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 1vh;
-  column-gap: 2vw;
-  padding: 2% 2% 2% 5%;
-  border-left: 1px solid;
-  margin-left: 2%;
+  column-gap: 1vw;
+  margin: 5% 2% 2% 5%;
+}
+
+.footer-links {
+  font-size: 0.7rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -159,6 +184,10 @@ nav {
 
   .input-search {
     width: 40vw;
+  }
+
+  .home-footer {
+    flex-wrap: nowrap;
   }
 }
 
@@ -204,5 +233,6 @@ nav {
 
   .home-footer {
     flex-wrap: nowrap;
+    padding: 0 8% 0;
   }
 }
