--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,6 @@
 }
 
 body {
-  border: 5px solid red;
   height: 100vh;
   width: 100vw;
 }
@@ -25,6 +24,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
 }
 
 a {
@@ -129,7 +129,7 @@ nav {
   bottom: 0;
   width: 100%;
   height: 40vh;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
 .infos-container {
