--- a/src/styles.css
+++ b/src/styles.css
@@ -118,6 +118,23 @@ nav {
   align-items: center;
 }
 
+.highlights {
+  color: var(--blue);
+  margin: 3% 10%;
+}
+
+.highlights-imgs {
+  display: flex;
+  justify-content: space-between;
+  margin: 3% 0;
+  flex-wrap: wrap;
+}
+
+.highlights-img {
+  height: 40vh;
+  border-radius: 50px;
+}
+
 .home-footer {
   background-color: var(--blue);
   color: var(--white);
@@ -125,7 +142,7 @@ nav {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 40vh;
@@ -225,6 +242,10 @@ nav {
     justify-content: space-evenly;
     align-items: center;
     padding: 0 8% 0;
+  }
+
+  .highlights {
+    margin: 3% 10%;
   }
 
   .input-search {
