--- a/src/styles.css
+++ b/src/styles.css
@@ -138,6 +138,23 @@ nav {
 
 .blue-container {
   background-color: var(--blue);
+  height: 10vh;
+  width: 20vw;
+  height: 10vh;
+  width: 80vw;
+  position: relative;
+  margin: 1% auto;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.blue-container-links {
+  color: var(--white);
+  font-weight: bolder;
+  font-size: 0.8em;
 }
 
 .home-footer {
