--- a/src/styles.css
+++ b/src/styles.css
@@ -162,6 +162,50 @@ nav {
   height: 2vh;
 }
 
+.buttons-container {
+  height: 15vh;
+  width: 80vw;
+  position: relative;
+  margin: 1% auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button-icon {
+  height: 8vh;
+}
+
+.buttons-container-link {
+  height: 10vh;
+  display: flex;
+  width: 16vw;
+  border-radius: 10px;
+  color: var(--white);
+  text-transform: uppercase;
+  font-weight: bolder;
+  text-align: center;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 0.9em;
+}
+
+.lixo {
+  background-color: green;
+}
+
+.sic {
+  background-color: rgb(133, 5, 5);
+}
+
+.pat {
+  background-color: gray;
+}
+
+.ouvidoria {
+  background-color: var(--blue);
+}
+
 .home-footer {
   background-color: var(--blue);
   color: var(--white);
