--- a/src/styles.css
+++ b/src/styles.css
@@ -168,13 +168,21 @@ nav {
   color: var(--blue);
 }
 
-.news-img {
-  height: 28vh;
-  border-radius: 20px;
-  object-fit: scale-down;
+.news-imgs-container {
+  border: 2px solid yellow;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-news-img {
+  border-radius: 20px;
+  max-width: 100%;
+  height: auto;
+}
+
+.main-news-imgs {
   border: 1px solid green;
   display: flex;
   flex-direction: column;
@@ -193,7 +201,27 @@ nav {
 
 .info {
   font-size: 0.7em;
-  margin: 0 3%;
+}
+
+.secondary-news-imgs-container {
+  border: 2px solid blue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.secondary-news-imgs {
+  border: 1px solid orange;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.secondary-news-img {
+  height: 15vh;
+  border-radius: 20px;
+  margin: 1% 3% 1% 1%;
 }
 
 .buttons-container {
@@ -388,6 +416,18 @@ nav {
 
   .blue-container-icon {
     height: 5vh;
+  }
+
+  .news-imgs-container {
+    flex-direction: row;
+  }
+
+  .main-news-imgs {
+    width: 50%;
+  }
+
+  .secondary-news-imgs-container {
+    width: 50%;
   }
 
   .buttons-container {
