--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,6 @@
   --white: #ffff;
 }
 
-/*body {
-  height: 100%;
-  width: 100vw;
-}*/
-
 header {
   background-color: var(--blue);
   height: 20vh;
@@ -163,17 +158,16 @@ nav {
 }
 
 .news-container {
-  border: 1px solid red;
   margin: 3% 10%;
   color: var(--blue);
 }
 
 .news-imgs-container {
-  border: 2px solid yellow;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 4% 0;
 }
 
 .main-news-img {
@@ -183,7 +177,6 @@ nav {
 }
 
 .main-news-imgs {
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -192,7 +185,7 @@ nav {
 }
 
 .news-caption {
-  color: gray;
+  color: darkslategrey;
 }
 
 .date {
@@ -200,11 +193,10 @@ nav {
 }
 
 .info {
-  font-size: 0.7em;
+  font-size: 0.9em;
 }
 
 .secondary-news-imgs-container {
-  border: 2px solid blue;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -212,7 +204,6 @@ nav {
 }
 
 .secondary-news-imgs {
-  border: 1px solid orange;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -418,16 +409,25 @@ nav {
     height: 5vh;
   }
 
-  .news-imgs-container {
-    flex-direction: row;
+  .main-news-imgs {
+    height: 90%;
   }
 
-  .main-news-imgs {
-    width: 50%;
+  .news-imgs-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    margin: 0;
   }
 
   .secondary-news-imgs-container {
-    width: 50%;
+    height: 90%;
+    justify-content: space-between;
+  }
+
+  .secondary-news-img {
+    height: 23vh;
+    margin: 1% 3% 1% 3%;
   }
 
   .buttons-container {
