--- a/src/styles.css
+++ b/src/styles.css
@@ -232,6 +232,17 @@ nav {
   padding: 3% 10%;
 }
 
+.container-galery-video {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.video-container {
+  margin: 10% 0;
+}
+
 .galery-imgs {
   width: 55%;
   display: grid;
@@ -379,7 +390,7 @@ nav {
     height: 10vh;
   }
 
-  .galery-imgs { 
+  .galery-imgs {
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 0;
   }
@@ -465,6 +476,21 @@ nav {
   .secondary-news-img {
     height: 23vh;
     margin: 1% 3% 1% 3%;
+  }
+
+  .container-galery-video {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .video-container {
+    margin: 0;
+  }
+
+  .video {
+    width: 380px;
+    height: 280px;
   }
 
   .buttons-container {
