--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,15 @@ a {
   text-decoration: none;
 }
 
+button {
+  cursor: pointer;
+}
+
+button:hover,
+a:hover {
+  opacity: 0.5;
+}
+
 .header-buttons {
   display: flex;
   justify-content: center;
@@ -258,6 +267,46 @@ nav {
   border-radius: 20px;
 }
 
+.tourism-container {
+  background-color: var(--medium-blue);
+  color: var(--white);
+  padding: 3% 10%;
+}
+
+.tourism-imgs {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 3% 0;
+}
+
+.img-tourism-container {
+  position: relative;
+}
+
+.tourism-links {
+  color: var(--white);
+  font-weight: bold;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--dark-blue);
+  height: 50px;
+  text-align: center;
+  width: 190px;
+  padding: 12px 0 12px;
+  border-radius: 20px;
+}
+
+.img-tourism {
+  width: 200px;
+  height: 260px;
+  border-radius: 20px;
+  margin: 3% 0;
+}
+
 .buttons-container {
   width: 80vw;
   position: relative;
@@ -386,6 +435,11 @@ nav {
     font-size: 0.9em;
   }
 
+  .img-tourism {
+    width: 260px;
+    height: 360px;
+  }
+
   .buttons-container-link {
     height: 10vh;
   }
@@ -491,6 +545,12 @@ nav {
   .video {
     width: 380px;
     height: 280px;
+  }
+
+  .tourism-imgs {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
 
   .buttons-container {
