--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,19 @@ a:hover {
   margin-left: 3%;
 }
 
+.darkmode {
+  position: relative;
+  width: 35px;
+}
+
+.half-circle-icon {
+  height: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .header-links {
   position: relative;
   top: 6%;
