--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@ a:hover {
 body {
   background-color: var(--white);
   color: (var(--blue));
+  font-size: 16px;
 }
 
 .header-buttons {
@@ -85,7 +86,7 @@ body {
 .nav-link,
 .footer-links {
   color: var(--white);
-  font-size: 0.9rem;
+  font-size: 0.9em;
 }
 
 .section-search {
@@ -105,7 +106,7 @@ body {
 }
 
 .logo-title-prefeitura {
-  font-size: 1rem;
+  font-size: 1em;
 }
 
 .logo-tatui {
@@ -114,7 +115,7 @@ body {
 
 .logo-title {
   font-weight: bolder;
-  font-size: 2.3rem;
+  font-size: 2.3em;
   text-align: center;
 }
 
