--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,10 @@ a:hover {
   opacity: 0.5;
 }
 
+li {
+  list-style-type: none;
+}
+
 .header-buttons {
   display: flex;
   justify-content: center;
@@ -331,6 +335,37 @@ nav {
   margin: 3% 0;
 }
 
+.events-edicts {
+  margin: 3% 10%;
+  color: var(--blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.events-edicts-title {
+  margin: 5% 0 5%;
+}
+
+.edicts-links,
+.events-links {
+  color: rgb(56, 55, 55);
+}
+
+.titulo {
+  margin: 3% 0 1%;
+}
+
+.evnts {
+  left: 70%;
+  top: 20%;
+}
+
+.edcts {
+  left: 70%;
+  top: 10%;
+}
+
 .buttons-container {
   width: 80vw;
   position: relative;
@@ -587,6 +622,16 @@ nav {
 
   .input-search {
     width: 20vw;
+  }
+
+  .events-edicts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .edicts-container {
+    border-left: 1px solid rgb(56, 55, 55);
+    padding-left: 20%;
   }
 
   .home-footer {
